2006-08-22  Matthias Clasen <mclasen@redhat.com>

	* Branch for 2.12
