@@ -36,8 +36,11 @@ Specify marshaller prefix. The default prefix is `\fIg_cclosure_marshal\fP'.
 Skip source location remarks in generated comments.
 .TP
 \fI--nostdinc
-Do not use the standard marshallers of the GObject library, and skip gmarshal.h include
-directive in generated header files.
+Do not use the standard marshallers of the GObject library, and skip
+gmarshal.h include directive in generated header files.
+.TP
+\fI--internal
+Mark generated function as internal by using the G_GNUC_INTERNAL macro.
 .TP
 \fI--g-fatal-warnings
 Make warnings fatal, that is, exit immediately once a warning occurs.
